--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,6 +182,7 @@ footer p span {
 
   body {
     background-color: #525252;
+    background-image: url("../Images/milad-fakurian-eRbgsJ0Ec20o-unsplash@2x-2(EXTENDED)@2x copy.png");
   }
   
   h1 {
@@ -245,4 +246,30 @@ footer {
     margin-bottom: -1rem;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+}
+
+@media ( min-height: 800px ) and ( max-height: 1100px ) {
+
+  .grid-container {
+    margin-top: 2rem;
+  }
+  .country-container {
+    width: 80%;
+    max-width: 25rem;
+    padding: 2rem 1rem;
+    border-radius: 2rem;
+    position: absolute;
+  }
+
+  .intro-headers {
+    max-width: 20rem;
+    margin-top: -6rem;
+  }
+}
+
+@media ( min-height: 600px ) and ( max-height: 1100px ) and ( min-width: 700px ) {
+  footer {
+    visibility: hidden;
+  }
 }
