--- a/CSS/style.css
+++ b/CSS/style.css
@@ -178,7 +178,7 @@ footer p span {
   font-style: italic;
 }
 
-@media only screen and (max-width: 500px) {
+@media (max-width: 500px) {
 
   body {
     background-color: #525252;
@@ -186,23 +186,25 @@ footer p span {
   }
   
   h1 {
-    max-width: 60%;
+    max-width: 50%;
     font-size: 2.5rem;
     display: inline-block;
     align-items: center;
+    font-size: 2rem;
   }
   .grid-container {
     margin-top: 2rem;
   }
   .country-container {
-    width: 60%;
+    width: 50%;
     max-width: 35rem;
     padding: 2rem 1rem;
     border-radius: 2rem;
     position: absolute;
+    margin-top: 1rem;
   }
   .country-container input {
-    width: 100%;
+    width: 90%;
     border: none;
     border-radius: 0.5rem;
     font-size: 1.5rem;
@@ -240,12 +242,7 @@ footer p span {
 }
 
 footer {
-    position: absolute;
-    padding: 0;
-    bottom: 0;
-    margin-bottom: -1rem;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    visibility: hidden;
 }
 }
 
